Update meta url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:title" content="Giuseppe Sgroi | Ph.D Student" />
 		<meta property="og:type" content="article" />
 		<meta property="og:image" content="./assets/img/header-img/1.jpg" />
-		<meta property="og:url" content="https://www.dmi.unict.it/~gsgroi/" />
+		<meta property="og:url" content="https://pex2892.github.io/" />
 		<meta property="og:description" content="My name is Giuseppe Sgroi I'm a Ph.D Student, Data Scientist & Web Developer. Born in Catania (CT) in 1992. Passionate about computer science and bioinformatics." />
 		<meta property="og:locale" content="it_IT" />
 		<meta property="og:site_name" content="Giuseppe Sgroi">
