--- a/index.html
+++ b/index.html
@@ -804,57 +804,17 @@
 	                                </div>
 	                                <div class="icon-contact">
 	                                    <i class="fas fa-envelope"></i><span>Institutional e-mail</span>
-	                                    <p> <a href="mailto:giuseppe.sgroi@unict.it" title="Contact me - Giuseppe Sgroi">giuseppe.sgroi@unict.it</a></p>
+	                                    <p style="color: #007bff;">giuseppe . sgroi [at] unict . it</p>
 	                                </div>
 	                                <div class="icon-contact">
 	                                    <i class="fas fa-envelope"></i><span>Personal e-mail</span>
-	                                    <p> <a href="mailto:giuseppesgroi@live.it" title="Contact me - Giuseppe Sgroi">giuseppesgroi@live.it</a></p>
+	                                    <p style="color: #007bff;">giuseppesgroi [at] live . it</p>
 	                                </div>
 	                            </div><!-- /.contact-info -->
-	                            <!-- Google Map --
-	                            <div id="map" class="container-fluid"></div>-->
-	                            <!--
-	                            <!-- Contact Form --
-	                            <div class="page-title">
-	                                <i class="fas fa-at"></i>
-	                                <h2>GET IN TOUCH</h2>
-	                            </div>
-	                            <form id="contactForm" data-toggle="validator" class="shake">
-	                                <div class="row no-gutters">
-	                                    <div class="col-md-6 p-right">
-	                                        <div class="form-group">
-	                                            <!-- ENTER MANE --
-	                                            <input type="text" class="form-control" id="name" placeholder="Enter name" required data-error="Please enter your name">
-	                                            <div class="help-block with-errors"></div>
-	                                        </div>
-	                                        <div class="form-group">
-	                                            <!-- ENTER EMAIL --
-	                                            <input type="email" class="form-control" id="email" placeholder="Enter email" required data-error="Please enter your email address">
-	                                            <div class="help-block with-errors"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="col-md-6">
-	                                        <div class="form-group">
-	                                            <!-- ENTER MESSAGE --
-	                                            <textarea id="message" class="form-control enter-message" rows="5" placeholder="Enter your message" required data-error="Please enter your message"></textarea>
-	                                            <div class="help-block with-errors"></div>
-	                                        </div>
-	                                    </div>
-	                                    <div class="col-md-12">
-	                                        <!-- button form submit --
-	                                        <div class="submit">
-	                                            <div class="content-button text-center">
-	                                                <button id="form-submit" class="button">Send Message</button>
-	                                            </div>
-	                                            <div id="msgSubmit" class="h5 h5 text-danger hidden text-center"></div>
-	                                        </div>
-	                                    </div>
-	                                </div><!-- /.row -->
-	                            </form><!-- /#contactForm -->
 	                        </div><!-- /.wrap-content -->
 	                        <!-- Contact Page Footer -->
 	                        <footer>
-	                            <span class="copyright">Giuseppe Sgroi - &copy;2019 All Rights Reserved.</span>
+	                            <span class="copyright">Giuseppe Sgroi - &copy;2021 All Rights Reserved.</span>
 	                            <div class="social-link">
                                     <a href="https://www.facebook.com/giuseppe.sgroi.28" target="_blank" title="Facebook - Giuseppe Sgroi"><i class="fab fa-facebook-f"></i></a>
                                     <a href="https://twitter.com/GiuseppeSgroi" target="_blank" title="Twitter - Giuseppe Sgroi"><i class="fab fa-twitter"></i></a>
@@ -869,21 +829,8 @@
 	            </div><!-- /.row -->
 	        </div><!-- /.container -->
 	    </div><!-- /.wrap-all-content -->
+
 	    <!-- JS -->
-	    <!--<script src="./assets/js/googlemap.js"></script>
-	    <script src="../../maps.googleapis.com/maps/api/js17ab?key=AIzaSyD6nYzGQstewXBaD9IypnbBfGOL1UUP3a0&amp;callback=initMap"></script>-->
-
-	        <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
-        });
-      }
-    </script>
-
-	    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6nYzGQstewXBaD9IypnbBfGOL1UUP3a0&callback=initMap"></script>
 	    <script src="./assets/js/jquery.min.js"></script>
 	    <script src="./assets/js/parallax.js"></script>
 	    <script src="./assets/js/owl.carousel.min.js"></script>
