--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 	                                <h2>About Me</h2>
 	                            </div>
 	                            <h3 class="about-title">My name is Giuseppe Sgroi I'm a Ph.D Student, Data Scientist & Web Developer.</h3>
-	                            <p>Born in Catania (CT) in 1992. Passionate about computer science and bioinformatics. I received my Bachelor's degree and my Master's degree in Computer Science from the University of Catania in 2017 and 2018 respectively.<br />In 2017 I joined the COMBINE Group. From November 2018 I'm a PhD student of the XXXIV cycle at the University of Catania, in the Biomedical area (under the supervision of Prof. Francesco Pappalardo) and on the project funds: "<b>STriTuVaD: In Silico Trial for Tubercolosis Vaccine Development</b>" (<i>Horizon 2020</i>).<br />
-								My main research interests concern Biomedicine, with a particular focus on Computational modeling.</p>
+	                            <p>Born in Catania (CT) in 1992. Passionate about computer science and bioinformatics. I received my Bachelor's degree and my Master's degree in Computer Science from the University of Catania in 2017 and 2018, respectively.
+In 2017, I joined the COMBINE Group. From November 2018, I'm a Ph.D. student of the XXXIV cycle at the University of Catania, in the Biomedical area (under the supervision of Prof. Francesco Pappalardo) and on the project funds: "<b>STriTuVaD: In Silico Trial for Tuberculosis Vaccine Development</b>" (<i>Horizon 2020</i>).
+ My main research interests concern Biomedicine, with a particular focus on Computational modeling.</p>
 	                            <div class="section-skill">
 	                                <div class="sub-title">
 	                                    <i class="fas fa-user-ninja"></i>
